:angry: removing ia bargage

--- a/app/DOCKERFILE
+++ b/app/DOCKERFILE
@@ -1,10 +1,10 @@
 FROM python:3.8-slim
+
 WORKDIR /app
 
-COPY requirements.txt ./
+RUN apt install opencv -y
 
-run pip install --no-cache-dir -r requirements.txt
+RUN pip install -r opencv-python flask
 
-COPY . ./app
+CMD ["python", "main.py"]
 
-CMD ["python3", "app.py"]
